--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        android:textSize="0sp"
+        android:textSize="1sp"
         android:fontFamily="@font/main_font" />
 
     <TextView
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
+        android:textSize="1sp"
         android:fontFamily="@font/main_font" />
 
     <TextView
@@ -28,12 +29,12 @@
         android:layout_height="wrap_content"
         android:text="Coming soon.."
         android:textColor="@color/white"
-        android:fontFamily="@font/main_font"
+        android:fontFamily="@font/new_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        android:textSize="70sp"/>
+        android:textSize="90sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
